Compile patch